シェアボタンのデザインを修正する

--- a/src/app.scss
+++ b/src/app.scss
@@ -41,7 +41,7 @@ pre>code {
   top: 0;
 }
 
-#mastodon-share-button {
+#mastodon-share-button, #share-button {
   margin-top: 2rem;
   width: 100%;
 }
