アイコンの余白を調整する

--- a/src/app.scss
+++ b/src/app.scss
@@ -112,8 +112,7 @@ pre {
   align-items: flex-start;
   button {
     all: unset;
-    height: 3rem;
-    width: 3rem;
+    padding: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
