目次のハイライト機能を追加する

--- a/src/app.scss
+++ b/src/app.scss
@@ -122,3 +122,11 @@ pre {
     }
   }
 }
+
+ul {
+  li {
+    .active {
+      background: linear-gradient(transparent 65%, $indigo-700 65%);
+    }
+  }
+}
