importantキーワードを追加する

--- a/src/app.scss
+++ b/src/app.scss
@@ -126,7 +126,7 @@ pre>code {
   }
 
   .mt-container {
-    position: absolute;
+    position: absolute !important;
     height: 100%;
     width: 100%;
   }
