--- a/src/app.scss
+++ b/src/app.scss
@@ -1,27 +1,23 @@
-/* Write your global styles here, in SCSS syntax. Variables and mixins from the src/variables.scss file are available here without importing */
-@use "@picocss/pico/scss/pico" with ($theme-color: "indigo");
-@use "@picocss/pico/scss/colors" as *;
-@use "@picocss/pico/scss/_settings" as *;
 @use "highlight.js/styles/github-dark.min";
+@use "tailwindcss/base";
+@use "tailwindcss/components";
+@use "tailwindcss/utilities";
 
-:root {
-  --pico-typography-spacing-vertical: 1.3rem;
+.mt-post {
+  margin: 0;
 }
 
-.mt-post-header-user,
-.mt-post-header-date,
-.mt-post-counter-bar,
-.mt-post-preview-description {
-  --mt-color-contrast-gray: var(--pico-color);
-}
-
-pre {
-  code {
-    padding: var(--pico-spacing) !important;
-    background: var(--pico-code-background-color) !important;
-    font-size: inherit !important;
-    min-width: max-content;
+ul {
+  li {
+    .active {
+      background: linear-gradient(transparent 65%, oklch(var(--s) / 0.5) 65%);
+    }
   }
+}
+
+.toc {
+  overflow-y: auto;
+  height: 30vh;
 }
 
 body {
@@ -34,185 +30,40 @@ main {
   flex-grow: 1;
 }
 
-.sticky-top {
-  position: sticky;
-  top: 2rem;
+.mt-post {
+  padding: 2rem 1rem !important;
 }
 
+.mt-post-header-user,
+.mt-post-header-date,
+.mt-post-counter-bar,
+.mt-post-preview-description {
+  --mt-color-contrast-gray: oklch(var(--nc));
+}
+
+pre,
 pre>code {
-  font-size: 0.85rem;
-}
-
-.toc {
-  & article {
-    margin: var(--block-spacing-vertical) 0 !important;
-  }
-  & ul {
-    &:first-child {
-      padding: 0;
-      margin-bottom: 0;
-      overflow-y: auto;
-      height: 20vh;
-    }
-    & ul {
-      padding: revert;
-      padding: 0 0.75rem;
-    }
-  }
-  & li {
-    list-style: none;
-    & a {
-      text-decoration: none;
-    }
-  }
-}
-
-.cancel-and-share-buttons {
-  display: flex;
-  flex-flow: column;
-  row-gap: 1.5rem;
-
-  & .mastodon-share-close-button {
-    width: 100%;
-  }
-}
-
-@media (map-get($breakpoints, md, breakpoint) <=width) {
-  .grid {
-    article {
-      max-width: 40vw;
-    }
-  }
-
-  .button-group {
-
-    button,
-    a {
-      width: 4vh !important
-    }
-  }
-
-  .cancel-and-share-buttons {
-    display: flex;
-    flex-flow: row wrap;
-    row-gap: 0;
-    column-gap: 4%;
-
-    & .mastodon-share-close-button {
-      width: 48%;
-    }
-
-    & #mastodon-share-confirm-button {
-      width: 48%;
-      margin-bottom: 0;
-    }
-  }
-}
-
-@media (map-get($breakpoints, lg, breakpoint) <=width) {
-  .loading-toc {
-    height: 30vh !important;
-  }
-  .toc {
-    & ul {
-      &:first-child {
-        height: 30vh !important;
-      }
-    }
-  }
-
-  .main-content {
-    flex-flow: row !important;
-    column-gap: 5%;
-  }
-
-  .timeline {
-    width: 30%;
-    position: relative;
-
-    a {
-      --pico-color: #c2c7d0;
-
-      &:hover,
-      &:active,
-      &:focus {
-        --pico-color: #c2c7d0;
-      }
-    }
-  }
-
-  .mt-container {
-    position: absolute !important;
-    height: 100%;
-    width: 100%;
-  }
-
-  .article-card {
-    width: 65%;
-
-    .grid {
-      &:last-child {
-        article {
-          margin: 0;
-        }
-      }
-    }
-  }
-
-  .article-group {
-    display: flex;
-    flex-direction: row-reverse;
-    column-gap: 5%;
-  }
-
-  .article-content {
-    width: 65%;
-  }
-
-  .sidebar {
-    width: 30%;
-  }
+  background: oklch(var(--b1)) !important;
 }
 
 pre {
   display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
+  gap: 16px;
 
-  button {
-    all: unset;
-    padding: 1rem;
+  >code {
+    flex-grow: 1;
+  }
+
+  >button {
     display: flex;
-    justify-content: center;
     align-items: center;
-    cursor: pointer;
+    justify-content: center;
+    flex-shrink: 0;
 
-    svg {
-      transform: scale(1.7);
+    >svg {
+      width: 20px;
+      height: 20px;
     }
   }
-}
-
-ul {
-  li {
-    .active {
-      background: linear-gradient(transparent 65%, $indigo-700 65%);
-    }
-  }
-}
-
-figure {
-  margin-bottom: var(--pico-spacing);
-}
-
-main.container {
-  margin-top: 2rem;
-}
-
-.mt-post {
-  width: 100%;
-}
-
-.mt-footer {
-  margin: 0;
 }
