投稿を表す要素のマージンを削除する

--- a/src/lib/assets/stylesheets/app.scss
+++ b/src/lib/assets/stylesheets/app.scss
@@ -37,7 +37,8 @@ main {
 }
 
 .mt-post {
-  padding: 2rem 1rem !important;
+  padding: 1.8rem 1rem !important;
+  margin: 0 !important;
 }
 
 .mt-post-header-user,
